# leema

./: .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  GRAMMAR.md  LICENSE  Makefile  README.md  STRUPLES.md  hot-files.sh  prefab.lma  rustfmt.toml  test.py  test_clientserver.py
.github/workflows/: fmt.yml  makeT.yml  rust.yml
T/: arith.lma  block.lma  booland.lma  chess960.lma  color_enum.lma  compilerr_patt_func_vars.lma  cout_quotes.lma  date.lma  demo_factorial.lma  demo_failure.lma  destruct.lma  empty_struct.lma  example_failure.lma  fact_fmatch.lma  fact_match.lma  factorial.lma  failed_handled.lma  failed_inline.lma  failed_nonlinear.lma  failure.lma  failure_handled.lma  file.lma  file_read.lma  fizzbuzz.lma  fmatch_list_deep_scope.lma  fmatch_list_empty.lma  fmatch_list_tail.lma  fmatch_scope_depth.lma  footag_match.lma  footag_nomatch.lma  func_3params.lma  func_inc.lma  func_oneline.lma  func_typed.lma  gcd.lma  generic_struct.lma  handled_failure.lma  hashtag.lma  hello.lma  hello.txt  (+82 more)
T/data/: tasks.csv
core/: mod.lma
lexparse/: leema.h  leema.l  leema.y  libleemalex.c  token.h
lib/: LICENSE  README.md  cmp.lma  core.lma  date.lma  datetime.lma  dessert.lma  file.lma  hyper_client.lma  hyper_server.lma  io.lma  leema.lma  list.lma  map.lma  math.lma  option.lma  prefab.lma  set.lma  str.lma  task.lma  tcp.lma  time.lma  types.lma  udp.lma
lib/core/: core.lma
src/: lib.rs  main.rs  parse.rs  repl.rs
src/leema/: application.rs  ast.rs  ast2.rs  canonical.rs  code.rs  compile.rs  eval.rs  failure.rs  fiber.rs  file.rs  frame.rs  grammar.rs  grammar2.rs  http.rs  iexpr.rs  infer.rs  inter.rs  interloader.rs  io.rs  ixpr.rs  leema.pest  lex.rs  lib_core.rs  lib_date.rs  lib_http.rs  lib_hyper.rs  lib_io.rs  lib_json.rs  lib_leema.rs  lib_list.rs  lib_map.rs  lib_math.rs  lib_str.rs  (+40 more)
(+3 files in other folders)
