[package]
name = "leema"
version = "0.0.2"
authors = ["Matthew Graham <mattg@leema.org>"]
rustc-link-search = ["."]
rustc-link-lib = ["leemalex"]
edition = "2018"

[[bin]]
name = "leema"

[dependencies]
bytes = "0.4"
futures = "0.1"
libc = "0.2"
log = "0.4"
docopt = "1.1"
hyper = "0.12"
hyper-rustls = "0.16"
lazy_static = "1.4"
matches = "0.1"
mopa = "0.2.2"
pest = "2.1.3"
pest_derive = "2.1"
rand = "0.8"
rustc-serialize = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
tokio-current-thread = "0.1"
