[package]
name = "leema"
version = "0.0.2"
authors = ["Matthew Graham <mattg@leema.org>"]
rustc-link-search = ["."]
rustc-link-lib = ["leemalex"]
edition = "2018"

[[bin]]
name = "leema"

[dependencies]
futures = "0.3"
docopt = "1.1"
hyper = "0.14"
hyper-rustls = "0.23"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
matches = "0.1"
mopa = "0.2"
pest = "2.1"
pest_derive = "2.1"
rand = "0.8"
rustc-serialize = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.15", features = ["full"] }
tokio-current-thread = "0.1"
